<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ComputerRemoteActivity!</string>
    <string name="app_name">Computer Remote</string>
    <string name="sleep">Sleep</string>
    <string name="power_controls">Power Controls</string>
    <string name="run_cmd">Run Command</string>
    <string name="play_music">Play Music</string>
    <string name="control_mouse">Control Mouse</string>
    <string name="loading">Loading</string>
    <string name="manually">Enter IP</string>
    <string name="refresh">Refresh</string>

    <!-- Chat -->
    <string name="txt_chat_hint">Type a message</string>
    <string name="empty"></string>
    <string name="start_chatting">Start Chatting</string>
    <string name="design_computer_name">&lt;Computer Name&gt;</string>

    <string-array name="options">
        <item>TV</item><item>Chat</item>
        <item>Power</item>
        <item >Run Command</item>
        <item >Beep</item>
        <item >Wireless Mouse</item>
        
    </string-array>
    
    <string-array name="power_options">
        <item>Shutdown</item>
        <item>Restart</item>
        <item>Sleep</item>
        <item>Log Off</item>
        <item>Lock</item>
    </string-array>

</resources>